add users profile with his weekly recipes